# ot-harjoitustyo

./: README.md
harjoitustyo/: pyproject.toml  tasks.py
harjoitustyo/dokumentaatio/: maarittelydokumentti.md  maarittelydokumentti.txt  tyoaikakirjanpito.md  tyoaikakirjanpito.txt
harjoitustyo/src/: harjoitustyo.py  hashed.csv  index.py  securing.py  signin.py
harjoitustyo/src/tests/: harjoitustyo_test.py
laskarit/viikko1/: README.md  gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
