[tool.poetry]
name = "harjoitustyo"
version = "0.1.0"
description = ""
authors = ["harakanvarvas <niksu.hynninen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.5.0"
pytest = "^6.2.3"
coverage = "^5.5"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
